aks-infra/worker.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker
  namespace: task-system

spec:
  replicas: 1

  progressDeadlineSeconds: 600

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      terminationGracePeriodSeconds: 30

      containers:
      - name: worker

        image: taskregistry1.azurecr.io/worker:latest
        imagePullPolicy: Always
