aks-infra/api.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
  namespace: task-system

spec:
  replicas: 1

  progressDeadlineSeconds: 600

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      terminationGracePeriodSeconds: 30

      containers:
      - name: api

        image: taskregistry1.azurecr.io/api:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10

---
apiVersion: v1
kind: Service

metadata:
  name: api
  namespace: task-system

spec:
  type: ClusterIP

  selector:
    app: api

  ports:
  - port: 5000
    targetPort: 5000
