aks-infra/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: task-system-ingress
#   namespace: task-system
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: task-system.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: frontend-service
#             port:
#               number: 80

#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: api
#             port:
#               number: 5000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-system-ingress
  namespace: task-system
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
